#4165 - fixes a bug where the filters div on mobile was wider than the viewport

--- a/packages/scandipwa/src/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
+++ b/packages/scandipwa/src/component/CategoryFilterOverlay/CategoryFilterOverlay.style.scss
@@ -129,6 +129,7 @@
         --option-margin-inline: 6px;
 
         @include mobile {
+            max-width: 100vw;
             --option-margin-block: 7px;
             --option-margin-inline: 7px;
 
